--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,7 +48,7 @@
     }
   },
 
-  "postCreateCommand": "npm i"
+  "postCreateCommand": "sh /workspace/.devcontainer/postCreateCommand.sh"
 
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
