--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["devcontainers", "esbenp", "golangci"]
+  "cSpell.words": ["devcontainers", "esbenp", "golangci", "testdata", "tmpl"]
 }
