feat: add database setup steps.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
+# The DATABASE_URL is used within schema.prisma to connect to the Postgres
+# instance when running the prisma:migrate (DB setup) step.
+DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/lets_go
+
+# The DATABASE_API_ENDPOINT is used within the frontend to connect to the
+# backend API.
 BASE_API_ENDPOINT=http://localhost:9000/api/
