--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "be-lint": "cd backend && golangci-lint run",
-    "be-start": "cd backend && air",
-    "fe-start": "cd frontend && nodemon dev-server.js"
+    "backend:lint": "cd backend && golangci-lint run",
+    "backend:dev": "cd backend && air",
+    "frontend:start": "cd frontend && nodemon dev-server.js",
+    "prisma:migrate": "cd backend && npx prisma migrate dev"
   },
   "dependencies": {
     "express": "^4.17.1"
