--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
         "streetsidesoftware.code-spell-checker",
         "esbenp.prettier-vscode",
         "golang.go",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "prisma.prisma"
       ]
     }
   },
