--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,9 @@ jobs:
         run: ~/go/bin/golangci-lint run
         working-directory: ./backend
 
+      - name: Test
+        run: npm run backend:test
+
       - name: Build
         run: go build -v ./...
-        working-directory: ./backend
-
-      - name: Test
-        run: go test -v ./...
         working-directory: ./backend
