--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
+    "coverprofile",
     "devcontainers",
     "esbenp",
     "golangci",
+    "sqlmock",
     "sslmode",
     "steebchen",
     "testdata",
