--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "server.js",
   "scripts": {
     "backend:lint": "cd backend && golangci-lint run",
+    "backend:test": "cd backend && go test -cover -coverprofile=coverage.out ./...",
+    "backend:test:coverage": "npm run backend:test && cd backend && go tool cover -html=coverage.out -o coverage.html",
     "backend:dev": "cd backend && air",
     "frontend:dev": "cd frontend && nodemon dev-server.js",
     "prisma:migrate": "cd backend && go run github.com/steebchen/prisma-client-go migrate dev",
